# fixed_wing_matrix_lib

./: CMakeLists.txt  README.md
Matrix/: Matrix.hpp
PX4-Matrix/: CMakeLists.txt
PX4-Matrix/.cache/clangd/index/: AxisAngle.hpp.93C3438FF3A0D66F.idx  Dcm.hpp.2E08619CE967A306.idx  Dual.hpp.6F9139B158151AB5.idx  Euler.hpp.E068D7EADA08A2AC.idx  LeastSquaresSolver.hpp.DF8BEEF7814481F4.idx  Matrix.hpp.18D0D2D523AA1C39.idx  PseudoInverse.hpp.3DF10258C86DC84D.idx  PseudoInverse.hxx.83CE74E4BE57C73F.idx  Quaternion.hpp.886F6363525E8EEB.idx  Scalar.hpp.953A9CF71BE64A36.idx  Slice.hpp.B2BBB873307F5651.idx  SparseVector.hpp.E76444E85448951D.idx  SquareMatrix.hpp.B82116801B052751.idx  Vector.hpp.99801C6052DDAD5C.idx  Vector2.hpp.A9551A9C0B983BDA.idx  Vector3.hpp.1E2C5125FC2F7516.idx  attitude.cpp.A979442727B0E889.idx  copyto.cpp.A76CDDDA7A9A0E15.idx  dual.cpp.B5A941C2D119F0BD.idx  filter.cpp.1B2779DEF5FAA117.idx  filter.hpp.8302711A4C45DD66.idx  hatvee.cpp.FB3A9BC83D769346.idx  helper.cpp.A14C5DE28D6DF19C.idx  helper_functions.hpp.55E1A1C2976C6417.idx  integration.cpp.DB9C97C002C1AF61.idx  integration.hpp.B91C457250DC1F9F.idx  inverse.cpp.A1244F4AB66C07B4.idx  least_squares.cpp.725C6C1DEED57230.idx  math.hpp.660D350886EA0198.idx  matrixAssignment.cpp.D0604CE748ECAA87.idx  matrixMult.cpp.189E52EBF0FEE0BD.idx  matrixScalarMult.cpp.660C633207029412.idx  pseudoInverse.cpp.0DBC024F3FF31EA7.idx  setIdentity.cpp.99210C56C365AF8F.idx  slice.cpp.DBF7B667F1DA008D.idx  sparseVector.cpp.BA941813DAEE2739.idx  (+11 more)
PX4-Matrix/matrix/: Matrix.hpp
PX4-Matrix/test/: test_Matrix_lee.cpp
(+12 files in other folders)
